# approximation-theory

./: AGENT.md  Cargo.toml  README.md
src/: chebyshev.rs  error_bounds.rs  fourier.rs  interpolation.rs  least_squares.rs  lib.rs  pade.rs  remez.rs  spline.rs
