[package]
name = "approximation-theory"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SuperInstance/approximation-theory"
description = "Approximation theory in Rust — polynomial interpolation, splines, Chebyshev, Padé, Remez algorithm"

[dependencies]
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
